tests/circular_import_1.test
import A;
#### A.ml
import A;
####
SyntaxError: Circular import detected.
import A;
       ^
